# dpi-ai-governance-lab

./: CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  LICENSE.md  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: artifact_change_request.yml  bug_report.yml  enhancement_request.yml  paper_review_request.yml
.github/workflows/: ci.yml  link-check.yml  lint-markdown.yml  validate-schemas.yml
annexes/: README.md  normative-language-rfc2119.md  reference-bibliography.md  terminology-and-definitions.md  threat-model-library.md
artifacts/compute-sovereignty/: README.md  compute-dependency-risk-model.md  jurisdictional-risk-assessment.md  supply-chain-exposure-checklist.md
artifacts/conformance-profiles/: README.md  control-catalog.md  evidence-requirements.md  profile-automated-action.md  profile-basic.md  profile-decision-support.md
artifacts/data-exchange-governance/: README.md  access-approval-and-audit-logging.md  data-exchange-control-objectives.md  reidentification-testing-guidance.md  secondary-use-and-inference-risk.md
data/: README.md  control-ids.csv  risk-taxonomy.yaml
docs/: methodology.md  overview.md  release-checklist.md  walkthrough.md
docs/trace/: README.md  (+4 more)
dpi_ai_governance_lab.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
dpi_lab/: __init__.py
profiles/: conformance-profiles.md
reviews/: README.md
templates/: paper-analysis-template.md  risk-matrix-template.md
tools/: README.md
(+158 files in other folders)
