[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dpi-ai-governance-lab"
version = "0.4.1"
description = "DPI AI Governance Lab Workbench: deterministic paper review scaffolding, extraction, validation"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [{name = "DPI AI Governance Lab contributors"}]

dependencies = [
  "PyYAML>=6.0",
  "jsonschema>=4.19",
  "pypdf>=4.0",
  "openai>=1.0",
  "tiktoken>=0.7",
]

[project.scripts]
dpi-lab = "dpi_lab.cli.main:main"


[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
# Include schemas and templates needed at runtime
"dpi_lab" = [
  "resources/**/*.json",
  "resources/**/*.yaml",
  "resources/**/*.yml",
  "resources/**/*.md",
  "resources/**/*.txt",
]
